# clients-rs

./: .gitignore  Cargo.toml
config/: client.json
configs/: db_connection.json  mqtt_connection.json
examples/: sandbox.rs
src/: main.rs  parser.rs  ref.rs
src/client/: database.rs  mod.rs  mqtt.rs  setup_config.rs
src/forwarder/: mqtt_client.rs
