[package]
name = "mqtt-sql-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", features = ["vendored-ssl"] }
toml = "0.8"
serde_json = "1.0"
serde_derive = "1.0"
clap = "4.5"
ctrlc = "3.2"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.34"
log = "0.4.20"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "time"] }
serde = "1.0.197"
futures-util = "0.3.30"

[build-dependencies]
cargo_metadata = "0.18.1"
