[package]
name = "saltyfishie-clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
serde_json = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "time"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["macros", "sync", "rt-multi-thread"] }
futures-util = "0.3.30"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.2"
chrono = "0.4.34"
ctrlc-async = "=3.2.2"
tokio = { version = "1.36.0", features = ["full"] }
ctrlc = "3.2"
dotenv = "0.15.0"

[build-dependencies]
cargo_metadata = "0.18.1"

[[example]]
name = "sandbox"
